force-app/main/default/objects/Store_Product__c/Store_Product__c.object-meta.xml
<CustomObject>
    <label>Store Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>