force-app/main/default/objects/Store_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ballons</fullName>
                <default>true</default>
                <label>Ballons</label>
            </value>
            <value>
                <fullName>Banners</fullName>
            </value>
            <value>
                <fullName>Confetti</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Halloween</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Christmas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>