force-app/main/default/objects/Store_Product__c/fields/isRental__c.field-meta.xml
<CustomField>
    <fullName>isRental__c</fullName>
    <formula>RecordType.Name = &apos;Rental&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isARental</label>
    <type>Checkbox</type>
</CustomField>