force-app/main/default/objects/Store_Product__c/fields/IsRented__c.field-meta.xml
<CustomField>
    <fullName>IsRented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rented?</label>
    <type>Checkbox</type>
</CustomField>