force-app/main/default/objects/Store_Product__c/fields/MaxRentalDays__c.field-meta.xml
<CustomField>
    <fullName>MaxRentalDays__c</fullName>
    <label>Maximum Rental Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>