force-app/main/default/objects/Store_Product__c/fields/Rental_End__c.field-meta.xml
<CustomField>
    <fullName>Rental_End__c</fullName>
    <label>Rental End</label>
    <type>Date</type>
</CustomField>