force-app/main/default/objects/Store_Product__c/fields/Sum_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Ratings__c</fullName>
    <label>Sum of Ratings</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Store_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>