force-app/main/default/objects/Store_Product__c/recordTypes/Purchasable.recordType-meta.xml
<RecordType>
    <fullName>Purchasable</fullName>
    <active>true</active>
    <label>Purchasable</label>
</RecordType>