force-app/main/default/objects/Store_Product__c/recordTypes/Rental.recordType-meta.xml
<RecordType>
    <fullName>Rental</fullName>
    <active>true</active>
    <label>Rental</label>
</RecordType>