force-app/main/default/objects/Store_Product__c/recordTypes/Rental2.recordType-meta.xml
<RecordType>
    <fullName>Rental2</fullName>
    <active>true</active>
    <label>Rental2</label>
</RecordType>