force-app/main/default/objects/Store_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Rating__c</columns>
    <columns>Price_Per_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>