force-app/main/default/objects/Store_Product__c/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Price_Per_Unit__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Mine</filterScope>
    <label>Default</label>
</ListView>